# LibUsbDemo

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/tmk/libusbdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  libusb_utils.h  native-lib.cpp
app/src/main/cpp/hidapi/: CMakeLists.txt  hid.c  hidapi.h  jni_hidapi.cpp
app/src/main/cpp/libusb/: CMakeLists.txt  core.c  jni_libusb.cpp
app/src/main/java/com/tmk/libusbdemo/: DataConversion.kt  HidApi.kt  HidDeviceInfo.kt  LibUsb.kt  MainActivity.kt  MyUtil.kt  USBHIDReader.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: device_filter.xml
app/src/test/java/com/tmk/libusbdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
